# tieto-zadanie-rekrutacyjne

./: .gitignore  CMakeLists.txt  README.md  temp.txt  test.sh
debug/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tieto_zadanie_test
inc/: circular_buffer.h  logger.h  logger_payload.h  pcp_guard.h  proc_parser.h  thread_logger.h  thread_parser.h  thread_printer.h  thread_reader.h  thread_watchdog.h  watch_dog.h  watchdog.h
src/: CMakeLists.txt  PCP_Guard.c  circular_buffer.c  logger_payload.c  main.c  pcp_guard.c  proc_parser.c  thread_logger.c  thread_parser.c  thread_printer.c  thread_reader.c  thread_watch_dog.c  thread_watchdog.c  watch_dog.c  watchdog.c
test/: CMakeLists.txt  circular_buffer_test.c  logger_payload_test.c  pcp_guard_test.c  proc_parser_test.c  watch_dog_test.c  watchdog_test.c
